--- a/Web/styles.css
+++ b/Web/styles.css
@@ -1,7 +1,8 @@
 html {
 	height:100%;
 }
-body {
+
+.back {
 	height:100%;
 	background: #214f75; /* Old browsers */
 	background: -moz-linear-gradient(top, #214f75 0%, #2b9da4 100%); /* FF3.6+ */
@@ -10,38 +11,51 @@ body {
 	background: -o-linear-gradient(top, #214f75 0%,#2b9da4 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top, #214f75 0%,#2b9da4 100%); /* IE10+ */
 	background: linear-gradient(to bottom, #214f75 0%,#2b9da4 100%); /* W3C */
+	background-attachment: fixed;
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#214f75', endColorstr='#2b9da4',GradientType=0 ); /* IE6-9 */
-	margin: 0px;
+	margin: 0;
+}
+
+.wrapper {
+	-moz-box-sizing: border-box;
+    box-sizing: border-box;
+	margin-left: auto;
+	margin-right:auto;
+	width: 300px;
 }
 
 .header {
 	padding: 10px;
 	border:solid 0px white;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-	margin-left: auto;
-	margin-right:auto;
-	width: 300px;
 }
 
 .main {
+	min-height:100%;
+	height:auto !important;
+	height:100%;
 	overflow: hidden;
 	padding: 10px;
 	border:solid 1px white;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-	margin-left: auto;
-	margin-right:auto;
-	height:100%;
+    -moz-border-radius: 0px;
+	-webkit-border-radius: 10px 10px 0px 0px;
+	border-radius: 10px 10px 0px 0px; 
+    margin-bottom:-150px;
 	background-color: white;
 	width: 300px;
 }
 
+.footer, .push {
+	margin: 0;
+	height: 150px;
+}
+
 h1 {
 	font-family: Verdana, san-serif;
-	font-size: 16px;
+	font-size: 28px;
+	height: 48px;
+	line-height:48px;
 	color: white;
-	padding: 5px;
+	padding: 0px;
 	margin-left: -10px;
 	margin-right: -10px;
 	margin-top: -1px;
@@ -54,3 +68,63 @@ h1 {
 	background: linear-gradient(to bottom, #3E8ED0 0%,#2b9da4 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3E8ED0', endColorstr='#2b9da4',GradientType=0 ); /* IE6-9 */
 }
+
+.tabs {
+	width: 100%;
+	padding: 0px;
+	list-style:none;
+	display:table;
+	table-layout: fixed;
+	width: 100%;
+	text-align: center;
+    -moz-border-radius: 0px;
+	-webkit-border-radius: 3px 3px 0px 0px;
+	border-radius: 3px 3px 0px 0px; 
+    overflow: hidden;
+
+}
+
+.tabs li {
+	list-style:none;
+	display: table-cell;
+	text-align: center;
+	top: 20%;
+	bottom: 20%;
+	text-transform: uppercase;
+	font-family: Verdana;
+	font-size: 10px;
+	font-weight: 800;
+	color: #3D3D3D;
+}
+
+.tabs a {
+	padding:5px 10px;
+	display: block;
+	background:#E5E5E5;
+	color:#3D3D3D;
+	padding-bottom: 5px;
+	text-decoration:none;
+}
+
+.tabs a.active {
+	border-bottom: 5px solid #0099CC;
+}
+
+.less.active .button-read-more {
+    display: none;
+}
+.button-read-less {
+    display: none;
+}
+.less.active .button-read-less {
+    display: block;
+}
+.more {
+    margin: -20px 0 0 0;
+	padding: 0;
+	overflow: hidden;
+}
+.more p {
+    margin: 0;
+    padding: 0;
+}	
